Styling of navbar | change logo image | added title and float right

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   
   <nav class="nav-container">
 
-      <img src="assets/smashing-logo.png" class="nav-item" alt="Smashing Magazine">
-      <a href="#" class="nav-item spacing-nav">articles</a>
-      <a href="#" class="nav-item spacing-nav">guides</a>
-      <a href="#" class="nav-item spacing-nav">books</a>
-      <a href="#" class="nav-item spacing-nav">events</a>
-      <a href="#" class="nav-item spacing-nav">membership</a>
-      <a href="#" class="nav-item spacing-nav">jobs</a>
-      <button type="button" class="nav-item more-btn">more</button>
+      <a><img src="https://www.smashingmagazine.com/images/logo--full.svg" alt="Smashing Magazine"></a>
+      <div class="nav-btns">
+        <a href="#" class="nav-item spacing-nav">articles</a>
+        <a href="#" class="nav-item spacing-nav">guides</a>
+        <a href="#" class="nav-item spacing-nav">books</a>
+        <a href="#" class="nav-item spacing-nav">events</a>
+        <a href="#" class="nav-item spacing-nav">membership</a>
+        <a href="#" class="nav-item spacing-nav">jobs</a>
+        <button type="button" class="nav-item spacing-nav more-btn">more<i class="fas fa-cat"></i></button>
+      </div>
       <form>
           <div class="searchArti-form">
             <i class="fas fa-search"></i>
@@ -28,6 +30,19 @@
       </form>
 
   </nav>
+
+  <section class="latest-articles">
+
+    <div class="miss-articles">
+      <h4>Don’t Miss These Latest<br>Articles</h3>
+    </div>
+    
+    <div class="seriously-btn">
+      <i class="fas fa-stop-circle"></i>
+      <p class="serious-text">Seriously, red?</p>
+    </div>
+
+  </section>
 
 </body>
 </html>
