HTML Grid Changes
Top 4 Grid images set

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Smashing Magazine - For Web Designers and Developers</title>
   <link href="style.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2bdc450678.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -31,18 +32,66 @@
 
   </nav>
 
-  <section class="latest-articles">
 
     <div class="miss-articles">
-      <h4>Don’t Miss These Latest<br>Articles</h3>
+      <h4 class="article-a">Don’t Miss These Latest</h4>
+      <h4 class="article-b">Articles</h4>
     </div>
     
-    <div class="seriously-btn">
+  
+      <div class="seriously-btn">
       <i class="fas fa-stop-circle"></i>
       <p class="serious-text">Seriously, red?</p>
+    </div> 
+
+
+
+  <main class="grid-container">
+    <div class="grid-item">
+<div class="mini-flex">
+  <img src="images/img-a.jpg" alt="img-a">
+  <p class="img-para"><strong>Zara cooper</strong> Wrote</p>
+</div>
+  <p class="para">
+    Build and deploy an<br>angular form with netlify <br>forms and edge <span class="grid-comment"><i class="material-icons">comments</i> leave a comment</span>
+    </p>
+    <div class="mini-flex">
+<span># Forms</span>
+<span># Tools</span>
+    </div>
+</div>
+    </div>
+    <div class="grid-item">
+    <div class="mini-flex">
+      <img src="images/img-b.jpg" alt="img-b">
+      <p class="img-para"><strong>Zara cooper</strong> Wrote</p>
+    </div>
+      <p class="para">
+        Design Shopping: Get A Faster<br> Client Buy-In Through A Guided<br> Design Showcase <span class="grid-comment"><i class="material-icons">comments</i> leave a comment</span>
+      
+      </p>
     </div>
 
-  </section>
+    <div class="grid-item">
+<div class="mini-flex">
+      <img src="images/img-c.jpeg" alt="img-c">
+      <p class="img-para"><strong>Zara cooper</strong> Wrote</p>
+
+    </div>
+      <p class="para">
+        React Form Validation With<br> Formik And Yup <span class="grid-comment"><i class="material-icons">comments</i> leave a comment</span>
+      </p>
+    </div>
+    <div class="grid-item">
+      <div class="mini-flex">
+        <img src="images/img-d.jpg" alt="img-d">
+        <p class="img-para"><strong>Zara cooper</strong> Wrote</p>
+      </div>
+        <p class="para">
+          Using WebXR With Babylon.js <br>  <span class="grid-comment"><i class="material-icons">comments</i> leave a comment</span>
+        </p>
+    </div>
+  </main>
 
 </body>
 </html>
