Added 2nd articles section and 2nd-cat-img section | added background color to grid and next section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <a href="#" class="nav-item spacing-nav">events</a>
         <a href="#" class="nav-item spacing-nav">membership</a>
         <a href="#" class="nav-item spacing-nav">jobs</a>
-        <button type="button" class="nav-item spacing-nav more-btn">more<i class="fas fa-cat"></i></button>
+        <button type="button" class="nav-item spacing-nav more-btn"><span class="more-w">more</span><img src="images/menu-cat.svg" alt="menu cat"></button>
+      <!--<i class="fas fa-cat"></i>-->
       </div>
       <form>
           <div class="searchArti-form">
@@ -53,7 +54,7 @@
 
     <section class="grid-container">
 
-      <div class="grid-item">
+      <div class="grid-item gridI-color-1">
 
         <div class="mini-flex">
           <img src="images/img-a.jpg" alt="img-a">
@@ -72,7 +73,7 @@
   
       </div>
   
-      <div class="grid-item">
+      <div class="grid-item gridI-color-2">
   
         <div class="mini-flex">
           <img src="images/img-b.jpg" alt="img-b">
@@ -92,7 +93,7 @@
   
       </div>
   
-      <div class="grid-item">
+      <div class="grid-item gridI-color-3">
   
         <div class="grid-item-c">
   
@@ -116,7 +117,7 @@
     
       </div>
   
-      <div class="grid-item">
+      <div class="grid-item gridI-color-4">
   
         <div class="grid-item-c">
     
@@ -170,79 +171,173 @@
 
     </section>
 
-    <section class="articles-3">
+    <section class="light-grey">
 
-      <article class="one-article">
+      <div class="articles-3">
 
-        <p class="art-days"><span>6</span> DAYS AGO</p>
-        <h4 class="art-title"><a href="#">How to Manage File Uploads In React With Google Storage And GraphQL</a></h4>
-        <p class="art-author">by <a href="#">Nwani Victory</a></p>
-        <p class="art-para">
-          From a user’s profile picture to other media assets, data collection and storage to cloud services 
-          through file uploads have become an essential feature for most modern applications. In this article, 
-          you will learn how file uploads can be implemented…
-        </p>
-        <div class="art-arrow-1">
-          <i class="fas fa-long-arrow-alt-right"></i>
-        </div>
-
-      </article>
-
-      <article class="one-article">
-
-        <p class="art-days"><span>7</span> DAYS AGO</p>
-        <h4 class="art-title"><a href="#">Master TypeScript in 50 Short Lessons</a></h4>
-        <p class="art-author">by <a href="#">Vitaly Friedman</a></p>
-        <p class="art-para">
-          Meet our new practical guide on everything you need to know about TypeScript, its type system, and 
-          all its benefits in 50 lessons. 
-        </p>
-        <div class="art-arrow-2">
-          <i class="fas fa-long-arrow-alt-right"></i>
-        </div>
-
-      </article>
-
-      <article class="one-article">
-
-        <p class="art-days"><span>8</span> DAYS AGO</p>
-        <h4 class="art-title"><a href="#">Do Website Policy Disclosure Pages Always Have To Be So Ugly?</a></h4>
-        <p class="art-author">by <a href="#">Suzanne Scacca</a></p>
-        <p class="art-para">
-          In this article, we’re going to look at four ways that web designers can contribute to getting more 
-          policy disclosure pages read and terms actually agreed to.
-        </p>
-        <div class="art-arrow-3">
-          <i class="fas fa-long-arrow-alt-right"></i>
-        </div>
-
-      </article>
-
-    </section>
-
-    <section class="members-img-cont">
-
-      <div class="members-left">
-
-        <p>Our friends and supporters</p>
-
-        <div class="shopify-box">
-          <img src="images/ShopifyPartners-Panel.svg" alt="Shopify logo">
-          <p>Earn recurring revenue designing and developing eCommerce stores</p>
-          <button type="button">SIGN UP TODAY</button>
-        </div>
-
+        <article class="one-article">
+  
+          <p class="art-days"><span>6</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">How to Manage File Uploads In React With Google Storage And GraphQL</a></h4>
+          <p class="art-author">by <a href="#">Nwani Victory</a></p>
+          <p class="art-para">
+            From a user’s profile picture to other media assets, data collection and storage to cloud services 
+            through file uploads have become an essential feature for most modern applications. In this article, 
+            you will learn how file uploads can be implemented…
+          </p>
+          <div class="art-arrow-1">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+  
+        </article>
+  
+        <article class="one-article">
+  
+          <p class="art-days"><span>7</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">Master TypeScript in 50 Short Lessons</a></h4>
+          <p class="art-author">by <a href="#">Vitaly Friedman</a></p>
+          <p class="art-para">
+            Meet our new practical guide on everything you need to know about TypeScript, its type system, and 
+            all its benefits in 50 lessons.<a href="#"> Jump to table of contents</a>
+             and <a href="#">get the book right away.</a> 
+          </p>
+          <div class="art-arrow-2">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+  
+        </article>
+  
+        <article class="one-article">
+  
+          <p class="art-days"><span>8</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">Do Website Policy Disclosure Pages Always Have To Be So Ugly?</a></h4>
+          <p class="art-author">by <a href="#">Suzanne Scacca</a></p>
+          <p class="art-para">
+            In this article, we’re going to look at four ways that web designers can contribute to getting more 
+            policy disclosure pages read and terms actually agreed to.
+          </p>
+          <div class="art-arrow-3">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+  
+        </article>
+  
       </div>
 
-      <div class="members-right">
 
-        <div class="baristaCat-box">
-          <img src="images/singing-barista.svg" alt="Barista singing cat">
-          <h4><a href="#">1,699 smashing members</a></h4>
-          <p class="members-para">A friendly community that keeps this website alive. With books, webinars, discounts and networking 
-            — for just 1 coffee a month.<a href="#"> Join the family.</a></p>
-          <button type="button">Explore features<i class="fas fa-long-arrow-alt-right"></i></button>
-          <p>Already have an account?<a href="#"> Sign In!</a></p>
+      <div class="members-img-cont">
+
+        <div class="members-left">
+  
+          <p>Our friends and supporters</p>
+  
+          <div class="shopify-box">
+            <a href="#"><img src="images/ShopifyPartners-Panel.svg" alt="Shopify logo"></a>
+            <a href="#" class="shop-a-para"><p>Earn recurring revenue designing and developing eCommerce stores</p></a>
+            <a href="#"><button type="button">SIGN UP TODAY</button></a>
+          </div>
+  
+        </div>
+  
+        <div class="members-right">
+  
+          <div class="baristaCat-box">
+            <img src="images/singing-barista.svg" alt="Barista singing cat">
+            <h4><a href="#">1,699 smashing members</a></h4>
+            <p class="members-para">A friendly community that keeps this website alive. With books, webinars, discounts and networking 
+              — for just 1 coffee a month.<a href="#"> Join the family.</a></p>
+            <button type="button">Explore features<i class="fas fa-long-arrow-alt-right"></i></button>
+            <p>Already have an account?<a href="#"> Sign In!</a></p>
+          </div>
+  
+        </div>
+  
+      </div>
+
+
+      <div class="articles-3">
+
+        <article class="one-article">
+  
+          <p class="art-days"><span>8</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">Smashing Podcast Episode 26 With Natalia Tepluhina: What’s New In Vue 3.0?</a></h4>
+          <p class="art-author">by <a href="#">Drew McLellan</a></p>
+          <p class="art-para">
+            We’re talking all about VueJS. What’s new in the 3.0 release, and how 
+            hard will it be to migrate? Drew McLellan talks to core team member 
+            Natalia Tepluhina to find out.
+          </p>
+          <div class="art2-arrow-1">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+  
+        </article>
+  
+        <article class="one-article">
+  
+          <p class="art-days"><span>9</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">Useful Tools In Vue.js Web Development</a></h4>
+          <p class="art-author">by <a href="#">Timi Omoyeni</a></p>
+          <p class="art-para">
+            There are some tools that developers that are just getting started with 
+            Vue or sometimes, have experience building with Vue sometimes do not know 
+            exist to make development in Vue a lot easier. In this article, we’re 
+            going to look at a few of these…
+          </p>
+          <div class="art2-arrow-2">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+  
+        </article>
+  
+        <article class="one-article">
+  
+          <p class="art-days"><span>12</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">How To Use Face Motion To Interact With Typography</a></h4>
+          <p class="art-author">by <a href="#">Edoardo Cavazza</a></p>
+          <p class="art-para">
+            In this article, we will cover how to combine Machine Learning, variable 
+            fonts, and CSS grids to create layouts that respond to the proximity, 
+            the inclination, and the number of the users’ faces.
+          </p>
+          <div class="art2-arrow-3">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+  
+        </article>
+  
+      </div>
+
+      <div class="members-img-cont">
+
+        <article class="one-article-2">
+
+          <p class="art-days"><span>13</span> DAYS AGO</p>
+          <h4 class="art-title"><a href="#">Understanding TypeScript Generics</a></h4>
+          <p class="art-author">by <a href="#">Jamie Corkhill</a></p>
+          <p class="art-para">
+            An introduction to the utilization of Generics in TypeScript with examples 
+            grounded in real-world use cases, such as collections, approaches to error 
+            handling, the Repository Pattern, and so on.
+          </p>
+          <div class="art3-arrow-1">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+
+        </article>
+
+        <div class="members-right">
+
+          <div class="baristaCat-box">
+            <img src="images/cat-smashing-tv-2.svg" alt="Reporter cat">
+            <h4><a href="#">New on Smashing TV</a></h4>
+            <p class="members-para">A channel where seasoned developers show how they 
+              design, build, work and play. Coming up next:<a href="#">All about Icons</a>
+               with Marc Edwards (Oct 20).</p>
+            <button type="button">See all upcoming episodes<i class="fas fa-long-arrow-alt-right"></i></button>
+            <p>Already have an account?<a href="#"> Sign In!</a></p>
+          </div>
+
         </div>
 
       </div>
