HTML/CSS changes

--- a/index.html
+++ b/index.html
@@ -330,20 +330,134 @@
 
           <div class="baristaCat-box">
             <img src="images/cat-smashing-tv-2.svg" alt="Reporter cat">
-            <h4><a href="#">New on Smashing TV</a></h4>
+            <h1 class="smashing-head"><a href="#">New on Smashing TV</a></h1>
             <p class="members-para">A channel where seasoned developers show how they 
-              design, build, work and play. Coming up next:<a href="#">All about Icons</a>
+              design, build, work and play. Coming up next:  <a href="#"> All about Icons</a>
                with Marc Edwards (Oct 20).</p>
-            <button type="button">See all upcoming episodes<i class="fas fa-long-arrow-alt-right"></i></button>
+            <button type="button" class="upcoming-btn">See all upcoming episodes  <i class="fas fa-long-arrow-alt-right"></i></button>
             <p>Already have an account?<a href="#"> Sign In!</a></p>
           </div>
 
         </div>
 
       </div>
-
+      <div class="center-text">
+        <p>SEE ALL LATEST ARTICLES <i class="fas fa-long-arrow-alt-right"></i></p>
+        </div>
     </section>
 
+    <section class="shipping-now">
+      <p class="ship-p1">JUNE 2020 • SHIPPING NOW</p>
+      <p class="ship-p2"><a href="#">Meet “Click!”: Encourage Clicks <br>
+        Without Shady Tricks</a></p>
+<p class="ship-p3">Our new book on how to boost business KPIs, build trust and address <br>doubts effectively — without alienating people along the way. By Paul Boag.</p>
+    <button class="content-btn" type="button"> Jump to table of contents <i class="fas fa-long-arrow-alt-right"></i></button>
+    <div><img  class="home-illu" src="images/homepage-illu.svg" alt="The Smashing Cat peeking behind the book."></div>
+  </section>
+
+  <section="performance">
+<div class="per-flex">
+<img src="images/monica.png" alt="performance-lady">
+<p>
+  PERSON OF THE WEEK <br><br>
+Monica Powell is a software engineer who is passionate about making open source more accessible, creating <br> technology to elevate people, and building community. She loves to contribute to open-source projects, to teach, <br>and to inspire others through <a href="#">public speaking</a>  and <a href="#">writing</a>. To support women and non-binary React developers,<br> she founded the <a href="#">React Ladies</a> community. You can find Monica on Twitter as <a href="#">@waterproofheart</a>. Thank you for <br> sharing and caring, dear Monica!
+</p>
+</div>
+<div class="per-grid">
+<div class="per-grid-item">
+  <div class="grid-flex">
+    <img src="images/sanna.png" alt="sanna-img">
+    <div class="flex-grid-para">
+      <p>
+        Susanna Zaraysky wrote</p>
+    <p class="split"><a href="#">Writing For Global Audiences</a></p><br>
+    <p class="data">october 15, 2020 — Writing for a global audience made <br> up of different cultures, languages, abilities, and <br> expectations can be a challenge. Susanna Zaraysky <br> shares <a href="#">valuable tips</a> to help you master it.
+      </p>
+    </div></div>
+  
+</div>
+
+<div class="per-grid-item">
+  <div class="grid-flex">
+    <img src="images/lea.png" alt="lea-img">
+    <div class="flex-grid-para">
+      <p>
+        Lea Verou wrote</p>
+        <p class="split"><a href="#">Toggle Multiple Values With One <br> Custom Property</a></p><br>
+    <p class="data">october 14, 2020 — Have you heard of the –var: hack <br> already? It lets you turn multiple different values on <br> and off across multiple different properties and even <br> across multiple CSS rules with just one single property, <br> <a href="#">as Lea Verou shows.</a>
+      </p>
+    </div></div>
+  
+</div>
+<div class="per-grid-item">
+  <div class="grid-flex">
+    <img src="images/matthias.png" alt="matthias-img">
+    <div class="flex-grid-para">
+      <p>
+        Matthias Ott wrote</p>
+        <p class="split">:focus-visible <a href="#">Is Here</a></p><br>
+    <p class="data">october 13, 2020 — The new :focus-visible pseudo- <br>class lets you show focus styles only when they are <br> needed. Matthias Ott wrote up <a href="#">everything you need to <br> know about it.</a>
+      </p>
+    </div></div>
+  
+</div>
+<div class="per-grid-item">
+  <div class="grid-flex">
+    <img src="images/julia.png" alt="julia-img">
+    <div class="flex-grid-para">
+      <p>
+        Julia Evans wrote</p>
+        <p class="split"><a href="#">Brackets Cheat Sheet</a></p><br>
+    <p class="data">october 12, 2020 — Do you need a little refresher on <br> shell brackets? Julia Evans shares a comic-style <br> <a href="#">brackets cheat sheet</a> to help you identify them all.
+      </p>
+    </div></div>
+  
+</div>
+<div class="per-grid-item">
+  <div class="grid-flex">
+    <img src="images/trys.png" alt="tyrs-img">
+    <div class="flex-grid-para">
+      <p>
+        Clamp</p>
+        <p class="split"><a href="#">Writing For Global Audiences</a></p><br>
+    <p class="data">october 9, 2020 — CSS has some exciting new features <br> for fluid scaling, with clamp() being a superset of <br> min() and max(). Trys Mudford <a href="#">summarized what<br> you need to know about it.</a> 
+      </p>
+    </div></div>
+  
+</div>
+<div class="per-grid-item">
+  <div class="grid-flex">
+    <img src="images/andy.png" alt="andy-img">
+    <div class="flex-grid-para">
+      <p>
+        Andy Davies wrote</p>
+        <p class="split"><a href="#">Site-Speed Impact of Third-Party <br> Tags</a></p><br>
+    <p class="data">october 8, 2020 — Third-party tags can have a <br> significant impact on a site’s performance. Andy <br> Davies shares tips for <a href="#">minimizing that impact while</a> <br> still retaining the value those tags provide.
+      </p>
+    </div></div>
+  
+</div>
+</div>
+<div class="center-text">
+  <p>MORE LINKS ON TWITTER <i class="fas fa-long-arrow-alt-right"></i></p>
+  </div>
+  </section>
+
+  <section class="design-systems">
+<div class="design-flex">
+
+  <div class="design-para">
+    <p>FEATURED SMASHING BOOK</p>
+<p class="head">Design Systems</p>
+<p class="design-data">Meet <strong>Design Systems,</strong> a recent Smashing book in which Alla Kholmatova explores how to set <br> up an <strong>effective design system</strong> to create great digital products. With common traps, gotchas <br> and lessons learned.</p>
+<button class="design-btn" type="button">Jump to table of contents</button>
+  </div>
+
+<div class="design-img">
+<img src="images/design.png" alt="design-images">
+</div>
+</div>
+  </section>
   </main>
 
 
