Created footer with all its elements

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
           Coming up next:
         </p>
 
+        <i class="fas fa-times"></i>
+
         <div class="cat-img">
           <img src="images/cat-firechat.svg" alt="cat in front of fire place">
         </div>
@@ -181,7 +183,7 @@
 
     </section>
 
-    <section class="light-grey">
+    <div class="light-grey">
 
       <div class="articles-3">
 
@@ -356,12 +358,15 @@
         </div>
 
       </div>
+
       <div class="center-text">
         <p>SEE ALL LATEST ARTICLES <i class="fas fa-long-arrow-alt-right"></i></p>
       </div>
-    </section>
+
+    </div>
 
     <section class="shipping-now">
+
       <p class="ship-p1">JUNE 2020 • SHIPPING NOW</p>
       <p class="ship-p2"><a href="#">Meet “Click!”: Encourage Clicks <br>
           Without Shady Tricks</a></p>
@@ -370,6 +375,7 @@
       <button class="content-btn" type="button"> Jump to table of contents <i
           class="fas fa-long-arrow-alt-right"></i></button>
       <div><img class="home-illu" src="images/homepage-illu.svg" alt="The Smashing Cat peeking behind the book."></div>
+    
     </section>
 
     <section="performance">
@@ -500,82 +506,176 @@
         </div>
       </section>
 
-      <section class="grid-framework">
-        <div class="grid-items">
-          <div class="java-framwork">
-            <p>A SMASHING GUIDE TO</p>
-            <p class="head">JavaScript & <br> Frameworks</p>
-            <p class="data">
-              React, Vue, or perhaps the lightweight Alpine.js? Whether <br> you are an experienced JavaScript developer
-              working with <br> one of these frameworks, or just starting to learn, our <br> authors have created some
-              tutorials for
-              you.
-            </p>
-            <button type="button" class="java-btn">
-              Explore JavaScript & Frameworks
-            </button>
-          </div>
-        </div>
-        <div class="grid-items">
-          <div class="css-framework">
-            <p>A SMASHING GUIDE TO</p>
-            <p class="head">
-              CSS Layout
-            </p>
-            <p class="data">
-              CSS Layout has been transformed over the past years. We <br> have you covered with all you need to master
-              this
-              new world. <br> If you want to understand the technical details, or learn how <br> to use new CSS
-              creatively, these
-              guides can help.
-            </p>
-            <button class="css-btn" type="button">Explore CSS Layout
-            </button>
+      <div class="light-grey">
+
+        <section class="grid-framework">
+          <div class="grid-items">
+            <div class="java-framwork">
+              <p>A SMASHING GUIDE TO</p>
+              <p class="head">JavaScript & <br> Frameworks</p>
+              <p class="data">
+                React, Vue, or perhaps the lightweight Alpine.js? Whether <br> you are an experienced JavaScript developer
+                working with <br> one of these frameworks, or just starting to learn, our <br> authors have created some
+                tutorials for
+                you.
+              </p>
+              <button type="button" class="java-btn">
+                Explore JavaScript & Frameworks
+              </button>
+            </div>
 
           </div>
-        </div>
 
+          <div class="grid-items">
 
-        <div class="grid-items">
-          <div class="web-framework">
-            <p>A SMASHING GUIDE TO</p>
-            <p class="head">
-              Web Performance
-            </p>
-            <p class="data">
-              Ensuring your site loads quickly is important. The subject<br> touches almost every part of web design and
-              development,<br> from your choice of images to the performance of your web <br>server. In this guide we
-              bring
-              together information that can <br> help you build a fast site, and keep it fast.
-            </p>
-            <button class="explore-btn" type="button">Explore Performance
-            </button>
+            <div class="css-framework">
+              <p>A SMASHING GUIDE TO</p>
+              <p class="head">
+                CSS Layout
+              </p>
+              <p class="data">
+                CSS Layout has been transformed over the past years. We <br> have you covered with all you need to master
+                this
+                new world. <br> If you want to understand the technical details, or learn how <br> to use new CSS
+                creatively, these
+                guides can help.
+              </p>
+              <button class="css-btn" type="button">Explore CSS Layout
+              </button>
+
+            </div>
 
           </div>
-        </div>
 
-        <div class="grid-items">
-          <div class="newsletter-framework">
-            <img src="images/newsletter.png" alt="newsletter image">
-            <p class="head">
-              Email Newsletter
-            </p>
-            <p class="data">
-              Every Tuesday, we send an email newsletter with useful <br> techniques on front-end & UX. Subscribe and get a
-             <strong>freebie:</strong>  <br> <strong>Smart Interface Design Checklists PDF</strong> — right in your<br> inbox. 🔮
-            </p>
-            <form class="newsletter">
-              <input type="text" placeholder="Your Email" name="search">
-              <button type="submit"> MEOW ! </button>
-            </form>
-            <p class= newsletter-bottom-para>
-              Front-end, UX and design. 1× a week.<br>
-              You can always unsubscribe with just 1 click.
-            </p>
+
+          <div class="grid-items">
+
+            <div class="web-framework">
+
+              <p>A SMASHING GUIDE TO</p>
+              <p class="head">
+                Web Performance
+              </p>
+              <p class="data">
+                Ensuring your site loads quickly is important. The subject<br> touches almost every part of web design and
+                development,<br> from your choice of images to the performance of your web <br>server. In this guide we
+                bring
+                together information that can <br> help you build a fast site, and keep it fast.
+              </p>
+              <button class="explore-btn" type="button">Explore Performance</button>
+
+            </div>
+
           </div>
+
+          <div class="grid-items">
+
+            <div class="newsletter-framework">
+
+              <img src="images/newsletter.png" alt="newsletter image">
+              <p class="head">
+                Email Newsletter
+              </p>
+              <p class="data">
+                Every Tuesday, we send an email newsletter with useful <br> techniques on front-end & UX. Subscribe and get a
+               <strong>freebie:</strong>  <br> <strong>Smart Interface Design Checklists PDF</strong> — right in your<br> inbox.<span> 🔮</span>
+              </p>
+              <form class="newsletter">
+                <input type="text" placeholder="Your Email" name="search">
+                <button type="submit"> MEOW ! </button>
+              </form>
+              <p class= newsletter-bottom-para>
+                Front-end, UX and design. 1× a week.<br>
+                You can always unsubscribe with just 1 click.
+              </p>
+
+            </div>
+
+          </div>
+
+          <div class="center-text">
+            <p>SEE ALL GUIDES <i class="fas fa-long-arrow-alt-right"></i></p>
+          </div>
+
+        </section>
+
+      </div>
+
+      <footer class="footer-main">
+
+        <div class="footer-cont">
+
+          <h4>BROWSE ALL SMASHING MAGAZINE TOPICS</h4>
+
+          <ul class="lots-ofLinks">
+
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Accessibility</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Android</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Animation</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Animation</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Animation</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Apps</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> CSS</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Design</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Design Patterns</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Design Systems</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> E-Commerce</a>&nbsp;</li><br>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Freebies</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Graphics</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> HTML</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Illustrator</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Inspiration</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> iOS</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> JavaScript</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Mobile</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Pattern Libraries</a>&nbsp;</li><br>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Performance</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Photoshop</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Plugins</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> React</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Responsive Web Design</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Service Workers</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Sketch</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Typography</a>&nbsp;</li><br>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> UI</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Usability</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> User Experience</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Wallpapers</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Web Design</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> WordPress</a>&nbsp;</li>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Workflow</a>&nbsp;</li>
+
+          </ul>
+
+          <p class="foot-para"><span class="foot-para-italic">With a commitment to quality content for the design community.</span><br>
+            Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.           
+            Smashing is proudly running on<a href="#"> Netlify</a>.<br>            
+            Fonts by<a href="#"> Latinotype</a>.
+          </p>
+
+          <div class="birdy">
+            <img src="images/bird-cage.svg" class="bird-img" alt="yellow bird in a cage">
+          </div>
+          <div class="last-kitty">
+            <img src="images/cat-the-behemoth.svg" class="lastCat-img" alt="happy cat">
+          </div>
+
+          <ul class="last-links">
+
+            <li>✎<a href="#">Write for us</a>&nbsp;&nbsp;</li>
+            <li><a href="#">Contact us</a>&nbsp;&nbsp;</li>
+            <li><a href="#">About us(Impressum)</a>&nbsp;&nbsp;</li>
+            <li><a href="#">Privacy policy</a>&nbsp;&nbsp;</li><br>
+            <li><a href="#">Membership login</a>&nbsp;&nbsp;</li>
+            <li><a href="#">Delivery times</a>&nbsp;&nbsp;</li>
+            <li><a href="#">Advertise</a>&nbsp;&nbsp;</li>
+
+          </ul>
+
         </div>
 
-      </section>
+      </footer>
+
   </main>
 
 </body>
