read me file added successfully

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-
+  <!-- ====================Navbar Header================ -->
+<head>
   <nav class="nav-container">
 
     <a><img src="https://www.smashingmagazine.com/images/logo--full.svg" 
@@ -52,8 +53,8 @@
     </div>
 
   </div>
-
-
+</head>
+ <!-- =======================Main Section================ -->
   <main>
 
     <div class="grid-container">
@@ -152,7 +153,7 @@
       </div>
 
     </div>
-
+<!-- ================Smashing Membership section=================== -->
     <div class="cat-fire-cont">
 
       <div class="cat-text">
@@ -375,7 +376,7 @@
       </div>
 
     </div>
-
+<!-- ============== Encourage Clicks section============== -->
     <div class="shipping-now">
 
       <p class="ship-p1">JUNE 2020 • SHIPPING NOW</p>
@@ -390,7 +391,7 @@
         alt="The Smashing Cat peeking behind the book."></div>
     
       </div>
-
+<!-- =================Person of the week section============ -->
     <div class="performance">
 
       <div class="per-flex">
@@ -534,7 +535,7 @@
       </div>
 
     </div>
-
+<!-- ===============Smashing Guide section============= -->
     <div class="light-grey">
 
       <div class="grid-framework">
@@ -632,7 +633,7 @@
 
       </div>
       
-
+<!-- ===============Footer Section============== -->
       <footer class="footer-main">
 
         <div class="footer-cont">
