changes added to CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- ====================Navbar Header================ -->
-<head>
+<head class= "header">
   <nav class="nav-container">
 
     <a><img src="https://www.smashingmagazine.com/images/logo--full.svg" 
@@ -55,7 +55,7 @@
   </div>
 </head>
  <!-- =======================Main Section================ -->
-  <main>
+  <main class="main">
 
     <div class="grid-container">
 
